# server/routes/singleRoute.js
@@ -1,5 +1,5 @@
 import express from 'express'
-import singleRouteController from '../controllers/singleRouteController.js'
+import {testRouteController, singleRouteController} from '../controllers/singleRouteController.js'
 const router = express.Router()
 
 
@@ -9,6 +9,7 @@ router.get('/health-check',(req,res)=>{
 })
 
 router.post('/', singleRouteController)
+router.post('/test', testRouteController)
 
 
 export default router
